Add screenshots into README.md

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /captures
 app/src/main/res/values/pivate.xml
 .idea/misc.xml
-Screenshot
+all-screenshots
 app/app.iml
 app/src/main/res/mipmap-xxhdpi/icon.png
 .idea/vcs.xml
